# GearBot-2.0-API

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  config.toml.examle
.github/workflows/: build.yml  test.yml
src/: config.rs  error.rs  main.rs  util.rs
src/models/: mod.rs  token_response.rs  user_guilds.rs
src/redis/: mod.rs  redis_link.rs
src/routes/: hello.rs  mod.rs  team.rs  ws.rs
src/routes/discord/: auth.rs  login.rs  mod.rs  user_info.rs
src/routes/ws/: guild_list.rs  identify.rs  mod.rs  models.rs
src/util/: config.rs  error.rs
