[package]
name = "gearbot_api"
version = "0.1.0"
authors = ["AEnterprise <aenterprise@aenterprise.info>", "BlackHoleFox <blackholefoxdev@gmail.com>", "GearBot Contributors"]
edition = "2018"

[dependencies]
base64="0.13"
darkredis = "0.7"
flexi_logger = { version = "0.15", default-features = false, features = ["colors", "specfile", "ziplogs"] }
futures-util = { version = "0.3", default-features = false }
hyper = { version = "0.14" }
log = "0.4"
sha-1 = "0.9"
tokio = { version = "0.2", features = ["full", "sync", "time"] }
tokio-tungstenite = "0.11.0"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
uuid = { version = "0.8", features = ["serde", "v4"], default_features = false }